[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shiertier_caption"
version = "0.2.7"
description = "一个使用智谱AI GLM4V-Plus模型进行图片描述的Python包"
readme = "README.md"
authors = [{ name = "shiertier", email = "junjietext@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["zhipuai", "glm4v", "shiertier_caption", "image", "ai"]
dependencies = [
    "zhipuai>=1.0.0",
    "json_repair",
    "typed-ast"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/shiertier_utils/shiertier_caption"
Documentation = "https://github.com/shiertier_utils/shiertier_caption#readme"
Repository = "https://github.com/shiertier_utils/shiertier_caption.git"
Issues = "https://github.com/shiertier_utils/shiertier_caption/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.900",
    "build>=0.7.0",
    "twine>=3.4.0",
]